# arduino-rust-seed

./: README.md  cookiecutter.json  readme.md
{{cookiecutter.project_name}}/: Makefile
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-bin/: Cargo.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-bin/src/: main.rs
