[package]
name = "{{cookiecutter.project_name}}-bin"
version = "{{cookiecutter.version}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
edition = "2018"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
arduino-uno = { git = "https://github.com/Rahix/avr-hal" }

[dependencies.avr-device]
version = "0.2.2"
features = ["atmega328p"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

